--- a/.gitattributes
+++ b/.gitattributes
@@ -1,54 +1,49 @@
-*.doc  diff=astextplain
-*.DOC	diff=astextplain
-*.docx	diff=astextplain
-*.DOCX	diff=astextplain
-*.dot	diff=astextplain
-*.DOT	diff=astextplain
-*.pdf	diff=astextplain
-*.PDF	diff=astextplain
-*.rtf	diff=astextplain
-*.RTF	diff=astextplain
+###############################################################################
+# Set default behavior to:
+#   automatically normalize line endings on check-in
+###############################################################################
+*           text=auto
 
-*.jpg  	binary
-*.png 	binary
-*.gif 	binary
+###############################################################################
+# Set file behavior to:
+#   treat as text
+###############################################################################
+*.cmd       text
+*.config    text
+*.cs        text
+*.csproj    text
+*.groovy    text
+*.json      text
+*.md        text
+*.proj      text
+*.projitems text
+*.props     text
+*.ps1       text
+*.resx      text
+*.shproj    text
+*.sln       text
+*.targets   text
+*.txt       text
+*.xlf       text
+*.xml       text
 
-*.sh eol=lf
 
-*.cs text=auto diff=csharp 
-*.vb text=auto
-*.resx text=auto
-*.c text=auto
-*.cpp text=auto
-*.cxx text=auto
-*.h text=auto
-*.hxx text=auto
-*.py text=auto
-*.rb text=auto
-*.java text=auto
-*.html text=auto
-*.htm text=auto
-*.css text=auto
-*.scss text=auto
-*.sass text=auto
-*.less text=auto
-*.js text=auto
-*.lisp text=auto
-*.clj text=auto
-*.sql text=auto
-*.php text=auto
-*.lua text=auto
-*.m text=auto
-*.asm text=auto
-*.erl text=auto
-*.fs text=auto
-*.fsx text=auto
-*.hs text=auto
+###############################################################################
+# Set file behavior to:
+#   treat as text
+#   normalize to Windows-style line endings on check-in
+###############################################################################
+*.sln        text       eol=crlf
 
-*.props text=auto
-*.targets text=auto
-*.csproj text=auto
-*.vbproj text=auto
-*.fsproj text=auto
-*.dbproj text=auto
-*.sln text=auto eol=crlf
+###############################################################################
+# Set file behavior to:
+#   treat as text
+#   normalize to Unix-style line endings on check-in
+###############################################################################
+*.sh        text        eol=lf
+
+###############################################################################
+# Set file behavior to:
+#   treat as binary
+###############################################################################
+*.snk       binary
