Don't create an XLF file if there is nothing to translate

--- a/src/XliffTasks/XliffTasks.csproj
+++ b/src/XliffTasks/XliffTasks.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="XliffTasks.Tests" />
   </ItemGroup>
 
