--- a/eng/azure-pipelines.yml
+++ b/eng/azure-pipelines.yml
@@ -1,78 +1,92 @@
-# Branches that trigger a build on commit
+# CI and PR triggers
 trigger:
 - master
-
-# Branches that trigger builds on PR
+- release/3.0
 pr:
 - master
+- release/3.0
+
+variables:
+  - name: _TeamName
+    value: DotNetCore
+  - name: _BuildConfig 
+    value: Release
+  - name: _PublishUsingPipelines
+    value: true
+  - name: _DotNetArtifactsCategory
+    value: .NETCore
 
 jobs:
+- template: /eng/common/templates/jobs/jobs.yml
+  parameters:
+    enableMicrobuild: true
+    enablePublishBuildArtifacts: true
+    enablePublishTestResults: false
+    enablePublishBuildAssets: true
+    enablePublishUsingPipelines: $(_PublishUsingPipelines)
+    enableTelemetry: true
+    helixRepo: dotnet/standard
+    jobs:
+    - job: Windows_NT
+      pool: 
+        ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
+          name: NetCorePublic-Int-Pool
+          queue: buildpool.windows.10.amd64.vs2017.open
+        ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+          name: NetCoreInternal-Int-Pool
+          queue: buildpool.windows.10.amd64.vs2017
+      variables:
+      # Enable signing for internal, non-PR builds
+      - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+        - group: DotNet-Blob-Feed
+        - group: DotNet-Symbol-Server-Pats
+        - name: _SignType
+          value: Real
+        - name: _DotNetPublishToBlobFeed
+          value: true
+        - name: _BuildArgs
+          value: /p:SignType=$(_SignType)
+            /p:DotNetSignType=$(_SignType)
+            /p:MicroBuild_SigningEnabled=true 
+            /p:OverridePackageSource=https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json
+            /p:TeamName=$(_TeamName)
+            /p:DotNetPublishBlobFeedKey=$(dotnetfeed-storage-access-key-1)
+            /p:DotNetPublishBlobFeedUrl=https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json
+            /p:DotNetPublishToBlobFeed=true
+            /p:DotNetPublishUsingPipelines=$(_PublishUsingPipelines)
+            /p:DotNetArtifactsCategory=$(_DotNetArtifactsCategory)
+            /p:DotNetSymbolServerTokenMsdl=$(microsoft-symbol-server-pat)
+            /p:DotNetSymbolServerTokenSymWeb=$(symweb-symbol-server-pat)
+            /p:OfficialBuildId=$(BUILD.BUILDNUMBER)
+        - name: _OfficialBuildIdArgs
+      # else
+      - ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
+        - name: _SignType
+          value: Test
+        - name: _BuildArgs
+          value: /p:SignType=$(_SignType)
+      steps:
+      - checkout: self
+        clean: true
+      - script: eng\common\cibuild.cmd
+          -configuration $(_BuildConfig) 
+          -prepareMachine
+          -warnaserror:0
+          $(_BuildArgs)
+        displayName: Windows Build / Publish
 
-- job: Windows
-  pool:
-    name: NetCorePublic-Int-Pool
-    queue: buildpool.windows.10.amd64.vs2017.open
-  variables:
-    _os: Windows
-  strategy:
-    maxParallel: 2
-    matrix:
-      Debug:
-        _configuration: Debug
-      Release:
-        _configuration: Release
-  timeoutInMinutes: 20
-  steps:
-    - script: $(Build.SourcesDirectory)\eng\common\cibuild.cmd -configuration $(_configuration) -prepareMachine
-      displayName: Build and Test
-    - task: PublishTestResults@1
-      inputs:
-        testRunner: XUnit
-        testResultsFiles: '$(Build.SourcesDirectory)\artifacts\TestResults\$(_configuration)\*.xml'
-        mergeTestResults: true
-        testRunTitle: '$(_os) $(_configuration)'
-      condition: always()
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Logs
-      inputs:
-        PathtoPublish: '$(Build.SourcesDirectory)\artifacts\log\$(_configuration)'
-        ArtifactName: '$(_os) $(_configuration)'
-      continueOnError: true
-      condition: not(succeeded())
-
-- job: Linux
-  pool: 
-   name: NetCorePublic-Int-Pool
-   queue: buildpool.ubuntu.1604.amd64.open
-  variables:
-    _os: Linux
-  strategy:
-    maxParallel: 2
-    matrix:
-      Debug:
-        _configuration: Debug
-      Release:
-        _configuration: Release
-  timeoutInMinutes: 90
-  steps:
-    - task: ShellScript@2
-      displayName: Build and Test
-      inputs:
-        scriptPath: ./eng/common/cibuild.sh
-        args: '--configuration $(_configuration) --prepareMachine'
-        failOnStandardError: true
-    - task: PublishTestResults@2
-      displayName: Publish xUnit Test Results
-      inputs:
-        testRunner: XUnit
-        testResultsFiles: '$(Build.SourcesDirectory)/artifacts/TestResults/$(_configuration)/*.xml'
-        mergeTestResults: true
-        testRunTitle: '$(_os) $(_configuration)'
-      condition: always()
-    - task: PublishBuildArtifacts@1
-      displayName: Publish Logs
-      inputs:
-        PathtoPublish: '$(Build.SourcesDirectory)/artifacts/log/$(_configuration)'
-        ArtifactName: '$(_os) $(_configuration)'
-      continueOnError: true
-      condition: not(succeeded())
+    # Linux leg (only runs in CI)
+    - ${{ if eq(variables['System.TeamProject'], 'public') }}:
+      - job: Linux
+        pool: 
+          name: Hosted Ubuntu 1604
+        variables:
+        - name: _SignType
+          value: Test
+        steps:
+        - checkout: self
+          clean: true
+        - script: eng/common/cibuild.sh
+            --configuration $(_BuildConfig)
+            --prepareMachine
+          displayName: Linux Build
