Add local + ci for source-build build infra
This enables 'source-build', which makes it easier to build the entire
shipping .NET SDK from source.

This is the first and second step of arcade-powered-source-build:
https://github.com/dotnet/source-build/blob/master/Documentation/planning/arcade-powered-source-build/README.md

See https://github.com/dotnet/xdt/pull/352 for a similar PR, that this is based on.

--- a/eng/azure-pipelines.yml
+++ b/eng/azure-pipelines.yml
@@ -25,6 +25,7 @@ stages:
       enablePublishTestResults: false
       enablePublishBuildAssets: true
       enablePublishUsingPipelines: $(_PublishUsingPipelines)
+      enableSourceBuild: true
       enableTelemetry: true
       helixRepo: dotnet/standard
       jobs:
