Change package name

--- a/src/XliffTasks/XliffTasks.csproj
+++ b/src/XliffTasks/XliffTasks.csproj
@@ -12,6 +12,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <LangVersion>7.2</LangVersion>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+    <AssemblyName>Microsoft.XliffTasks</AssemblyName>
+    <RootNamespace>XliffTasks</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
