--- a/src/XliffTasks.Tests/XliffTasks.Tests.csproj
+++ b/src/XliffTasks.Tests/XliffTasks.Tests.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\XliffTasks\XliffTasks.csproj" />
   </ItemGroup>
 
