Clean-up xliff repo
Make the repository more consistent with the rest of the core stack.
Delete outdated / unneeded settings and remove the 2.x shared framework
dependency. Remove the unused official build yml file.

Also update the repository to an 8.0 SDK and net8.0 TFM.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ artifacts/
 bin/
 obj/
 .dotnet/
+msbuild.binlog
 
 ###############################################################################
 # Visual Studio
