--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -5,7 +5,7 @@
     <UsingToolXliff>false</UsingToolXliff>
     <!-- MSBuild
          Only update when there's a source-build package available. -->
-    <MicrosoftBuildPackageVersion>15.1.1012</MicrosoftBuildPackageVersion>
-    <MicrosoftBuildUtilitiesCoreVersion>15.1.1012</MicrosoftBuildUtilitiesCoreVersion>
+    <MicrosoftBuildVersion>17.3.2</MicrosoftBuildVersion>
+    <MicrosoftBuildUtilitiesCoreVersion>17.3.2/MicrosoftBuildUtilitiesCoreVersion>
   </PropertyGroup>
 </Project>
